<resources>
    <string name="app_name">Ecommerce</string>
    <string name="find_buy_anything_title">Find,Discover Choose and Buy anything online</string>
    <string name="register">Register</string>
    <string name="already_have_an_account_login">Already have an Account? Login</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forget_password">Forget Password?</string>
    <string name="login">Login</string>
    <string name="admin">I am an Admin?</string>
    <string name="not_admin">I am not an Admin?</string>
    <string name="name">Name</string>
    <string name="create_account">Create Account</string>
</resources>